[project]
name = "war-thunder-test-drivegui"
version = "0.1.0"
description = "Fork of ask3lad/wt-testdrive-gui-2.0 to create modular structure"
authors = [
    {name = "Silletr",email = "silletrMain@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
